# energy-forecasting-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MIGRATION_NOTES.md  Makefile  PROJECT_COHERENCE_REPORT.md  PROJET_FINAL_REPORT.md  README.md  RELEASE_NOTES.md  TESTS_COMPLETS_FINAL.md  TESTS_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api.py  config.py  dashboard.py
app/api/: main.py  schemas.py
app/services/: evaluate.py  features.py  loader.py  models.py  registry.py
dashboard/: app.py
data/: .gitkeep
jobs/: backtest.py  fetch_data.py  retrain.py
models/: .gitkeep  comparison_20250915_225808.json  comparison_20250915_231803.json  comparison_20250915_235343.json  evaluation_summary.json  lightgbm_20250915_235153.joblib  linear_regression_20250915_235150.joblib  test_linear_latest.joblib  training_summary.json
notebooks/: 01_exploration_donnees.ipynb
scripts/: data_cache.py  evaluate_models.py  evaluate_simple.py  fetch_data.py  manage_cache.py  run_all_models.py  train_models.py  train_simple.py
scripts/models/: README.md  __init__.py  base_model.py  gradient_boosting_quantile.py  lightgbm_model.py  linear_regression.py  random_forest.py
src/: __init__.py  advanced_features.py  enhanced_models.py  evaluation.py  fairness.py  features.py  models.py  odre_loader.py  realistic_data.py  utils.py
tests/: test_api.py  test_features.py  test_models.py
